issues from latest feedback fixed

--- a/Kismat App/Storyboard/Base.lproj/Main.storyboard
+++ b/Kismat App/Storyboard/Base.lproj/Main.storyboard
@@ -3637,6 +3637,7 @@ You will not be able to use this account in the future.</string>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="backBtn" destination="jwM-Un-vJo" id="dnP-T7-i4e"/>
                         <outlet property="codeView" destination="ydp-Ny-Bxs" id="ag7-vL-Aay"/>
                         <outlet property="fifthTF" destination="mSU-jE-98L" id="ZZg-Ug-KT4"/>
                         <outlet property="firstTF" destination="eKV-UR-Sxu" id="Ct1-rP-10y"/>
@@ -3658,55 +3659,55 @@ You will not be able to use this account in the future.</string>
     </scenes>
     <designables>
         <designable name="0ZP-IY-8wV">
-            <size key="intrinsicContentSize" width="134" height="19"/>
+            <size key="intrinsicContentSize" width="70.333333333333329" height="12"/>
         </designable>
         <designable name="0pz-yD-d4n">
-            <size key="intrinsicContentSize" width="90.333333333333329" height="16.666666666666668"/>
+            <size key="intrinsicContentSize" width="108.66666666666667" height="20.333333333333332"/>
         </designable>
         <designable name="0t0-UR-Tat">
-            <size key="intrinsicContentSize" width="133.33333333333334" height="35.333333333333336"/>
+            <size key="intrinsicContentSize" width="61.333333333333336" height="20"/>
         </designable>
         <designable name="2WZ-mT-JiU">
-            <size key="intrinsicContentSize" width="466.33333333333331" height="33"/>
+            <size key="intrinsicContentSize" width="567.66666666666663" height="40.666666666666664"/>
         </designable>
         <designable name="3gP-Q6-AXE">
-            <size key="intrinsicContentSize" width="127" height="19"/>
+            <size key="intrinsicContentSize" width="66" height="12"/>
         </designable>
         <designable name="43Y-pb-wtz">
-            <size key="intrinsicContentSize" width="114.66666666666667" height="14.333333333333334"/>
+            <size key="intrinsicContentSize" width="146.66666666666666" height="20.333333333333332"/>
         </designable>
         <designable name="4Sp-6M-OBh">
-            <size key="intrinsicContentSize" width="69.666666666666671" height="14.333333333333334"/>
+            <size key="intrinsicContentSize" width="98.666666666666671" height="20.333333333333332"/>
         </designable>
         <designable name="5w6-ZN-cHD">
-            <size key="intrinsicContentSize" width="168" height="15.333333333333334"/>
+            <size key="intrinsicContentSize" width="218.33333333333334" height="20.333333333333332"/>
         </designable>
         <designable name="7Bc-kx-gWY">
-            <size key="intrinsicContentSize" width="35" height="29"/>
+            <size key="intrinsicContentSize" width="13" height="33.333333333333336"/>
         </designable>
         <designable name="7Hm-hD-Ke7">
-            <size key="intrinsicContentSize" width="26.666666666666668" height="19.666666666666668"/>
+            <size key="intrinsicContentSize" width="26.666666666666668" height="22"/>
         </designable>
         <designable name="7es-w6-l3U">
-            <size key="intrinsicContentSize" width="20" height="19"/>
+            <size key="intrinsicContentSize" width="20" height="22"/>
         </designable>
         <designable name="8b6-LU-FPq">
-            <size key="intrinsicContentSize" width="63.666666666666664" height="20.666666666666668"/>
+            <size key="intrinsicContentSize" width="26" height="13.666666666666666"/>
         </designable>
         <designable name="8kg-pJ-3sY">
-            <size key="intrinsicContentSize" width="81.666666666666671" height="20.666666666666668"/>
+            <size key="intrinsicContentSize" width="37.333333333333336" height="13.666666666666666"/>
         </designable>
         <designable name="9Lg-cq-Nv0">
-            <size key="intrinsicContentSize" width="142" height="19"/>
+            <size key="intrinsicContentSize" width="148.66666666666666" height="20.333333333333332"/>
         </designable>
         <designable name="CcO-Ru-ZFl">
-            <size key="intrinsicContentSize" width="71" height="31"/>
+            <size key="intrinsicContentSize" width="62" height="30"/>
         </designable>
         <designable name="CvK-p4-XF2">
-            <size key="intrinsicContentSize" width="35" height="31"/>
+            <size key="intrinsicContentSize" width="34" height="30"/>
         </designable>
         <designable name="D0O-Hf-zFJ">
-            <size key="intrinsicContentSize" width="94.333333333333329" height="19"/>
+            <size key="intrinsicContentSize" width="46.333333333333336" height="12"/>
         </designable>
         <designable name="DwX-B0-KIi">
             <size key="intrinsicContentSize" width="27" height="27"/>
@@ -3718,146 +3719,146 @@ You will not be able to use this account in the future.</string>
             <size key="intrinsicContentSize" width="48" height="48"/>
         </designable>
         <designable name="FdF-zO-SsO">
-            <size key="intrinsicContentSize" width="129" height="31"/>
+            <size key="intrinsicContentSize" width="123" height="30"/>
         </designable>
         <designable name="Fde-X5-2WN">
-            <size key="intrinsicContentSize" width="227" height="19"/>
+            <size key="intrinsicContentSize" width="234.66666666666666" height="20.333333333333332"/>
         </designable>
         <designable name="Fkw-EZ-gfF">
-            <size key="intrinsicContentSize" width="69" height="20.666666666666668"/>
+            <size key="intrinsicContentSize" width="29.333333333333332" height="13.666666666666666"/>
         </designable>
         <designable name="Hvi-f8-508">
-            <size key="intrinsicContentSize" width="47.333333333333336" height="21.333333333333332"/>
+            <size key="intrinsicContentSize" width="45" height="20.333333333333332"/>
         </designable>
         <designable name="I6S-jA-cbg">
-            <size key="intrinsicContentSize" width="35" height="29"/>
+            <size key="intrinsicContentSize" width="13" height="33.333333333333336"/>
         </designable>
         <designable name="IdU-6F-ZgX">
-            <size key="intrinsicContentSize" width="90" height="23.666666666666668"/>
+            <size key="intrinsicContentSize" width="74.333333333333329" height="20.333333333333332"/>
         </designable>
         <designable name="It5-3m-GYL">
-            <size key="intrinsicContentSize" width="96" height="31"/>
+            <size key="intrinsicContentSize" width="93" height="30"/>
         </designable>
         <designable name="JBx-SY-DoZ">
-            <size key="intrinsicContentSize" width="63.666666666666664" height="20.666666666666668"/>
+            <size key="intrinsicContentSize" width="26" height="13.666666666666666"/>
         </designable>
         <designable name="JVc-ug-2Zi"/>
         <designable name="JxZ-YY-3L0">
-            <size key="intrinsicContentSize" width="193.66666666666666" height="14.333333333333334"/>
+            <size key="intrinsicContentSize" width="275.33333333333331" height="20.333333333333332"/>
         </designable>
         <designable name="KaR-Mc-BMB">
-            <size key="intrinsicContentSize" width="35" height="31"/>
+            <size key="intrinsicContentSize" width="34" height="30"/>
         </designable>
         <designable name="L62-5r-p0Y">
-            <size key="intrinsicContentSize" width="240" height="31.666666666666668"/>
+            <size key="intrinsicContentSize" width="165.66666666666666" height="20.333333333333332"/>
         </designable>
         <designable name="LHQ-gX-34N">
-            <size key="intrinsicContentSize" width="121.33333333333333" height="35.333333333333336"/>
+            <size key="intrinsicContentSize" width="52.666666666666664" height="20"/>
         </designable>
         <designable name="OZM-Ne-b6O">
-            <size key="intrinsicContentSize" width="168.33333333333334" height="14.333333333333334"/>
+            <size key="intrinsicContentSize" width="239.33333333333334" height="20.333333333333332"/>
         </designable>
         <designable name="PDK-rV-LMg">
-            <size key="intrinsicContentSize" width="96" height="16.666666666666668"/>
+            <size key="intrinsicContentSize" width="115.33333333333333" height="20.333333333333332"/>
         </designable>
         <designable name="S9Q-It-9Aw">
-            <size key="intrinsicContentSize" width="173" height="21.333333333333332"/>
+            <size key="intrinsicContentSize" width="151.33333333333334" height="20.333333333333332"/>
         </designable>
         <designable name="SCe-NB-PKY">
-            <size key="intrinsicContentSize" width="213.33333333333334" height="31.666666666666668"/>
+            <size key="intrinsicContentSize" width="147.66666666666666" height="20.333333333333332"/>
         </designable>
         <designable name="SM8-lU-P1b">
-            <size key="intrinsicContentSize" width="15.666666666666666" height="19"/>
+            <size key="intrinsicContentSize" width="15.666666666666666" height="22"/>
         </designable>
         <designable name="Sux-1S-tdw">
-            <size key="intrinsicContentSize" width="146" height="15.333333333333334"/>
+            <size key="intrinsicContentSize" width="194" height="20.333333333333332"/>
         </designable>
         <designable name="WTt-vI-6R4">
-            <size key="intrinsicContentSize" width="35" height="29"/>
+            <size key="intrinsicContentSize" width="13" height="33.333333333333336"/>
         </designable>
         <designable name="X59-RV-k6Q">
-            <size key="intrinsicContentSize" width="506.66666666666669" height="33"/>
+            <size key="intrinsicContentSize" width="612" height="40.666666666666664"/>
         </designable>
         <designable name="ZlU-Hb-i3S">
-            <size key="intrinsicContentSize" width="248.33333333333334" height="61"/>
+            <size key="intrinsicContentSize" width="317.33333333333331" height="81.333333333333329"/>
         </designable>
         <designable name="a6e-P2-qtG">
-            <size key="intrinsicContentSize" width="55" height="31"/>
+            <size key="intrinsicContentSize" width="54" height="30"/>
         </designable>
         <designable name="aRI-Xg-5o1">
-            <size key="intrinsicContentSize" width="162.66666666666666" height="19"/>
+            <size key="intrinsicContentSize" width="87.666666666666671" height="12"/>
         </designable>
         <designable name="af5-1i-EA4">
-            <size key="intrinsicContentSize" width="20" height="19"/>
+            <size key="intrinsicContentSize" width="20" height="22"/>
         </designable>
         <designable name="b3O-xc-bXC">
-            <size key="intrinsicContentSize" width="168" height="15.333333333333334"/>
+            <size key="intrinsicContentSize" width="218.33333333333334" height="20.333333333333332"/>
         </designable>
         <designable name="bAO-7l-v8h">
-            <size key="intrinsicContentSize" width="20" height="19"/>
+            <size key="intrinsicContentSize" width="20" height="22"/>
         </designable>
         <designable name="bf5-4T-Cpx">
-            <size key="intrinsicContentSize" width="76" height="31"/>
+            <size key="intrinsicContentSize" width="74" height="30"/>
         </designable>
         <designable name="cEz-EQ-Cg9">
-            <size key="intrinsicContentSize" width="205" height="21.333333333333332"/>
+            <size key="intrinsicContentSize" width="189.33333333333334" height="20.333333333333332"/>
         </designable>
         <designable name="e1r-8r-A1G">
-            <size key="intrinsicContentSize" width="91.333333333333329" height="19"/>
+            <size key="intrinsicContentSize" width="95" height="20.333333333333332"/>
         </designable>
         <designable name="eKV-UR-Sxu">
-            <size key="intrinsicContentSize" width="35" height="29"/>
+            <size key="intrinsicContentSize" width="13.666666666666666" height="33.333333333333336"/>
         </designable>
         <designable name="eku-i5-B1A">
-            <size key="intrinsicContentSize" width="294" height="16.666666666666668"/>
+            <size key="intrinsicContentSize" width="350.66666666666669" height="20.333333333333332"/>
         </designable>
         <designable name="f47-es-wTH">
-            <size key="intrinsicContentSize" width="142.66666666666666" height="16.666666666666668"/>
+            <size key="intrinsicContentSize" width="172" height="20.333333333333332"/>
         </designable>
         <designable name="fHp-u4-Vaf">
-            <size key="intrinsicContentSize" width="49" height="31"/>
+            <size key="intrinsicContentSize" width="48" height="30"/>
         </designable>
         <designable name="hzv-hu-A8p">
-            <size key="intrinsicContentSize" width="49" height="31"/>
+            <size key="intrinsicContentSize" width="48" height="30"/>
         </designable>
         <designable name="iNY-NF-s6k">
-            <size key="intrinsicContentSize" width="96" height="16.666666666666668"/>
+            <size key="intrinsicContentSize" width="115.33333333333333" height="20.333333333333332"/>
         </designable>
         <designable name="iWN-4Z-XWq">
-            <size key="intrinsicContentSize" width="179" height="19"/>
+            <size key="intrinsicContentSize" width="183" height="20.333333333333332"/>
         </designable>
         <designable name="ioz-Qe-yuJ">
-            <size key="intrinsicContentSize" width="90" height="31"/>
+            <size key="intrinsicContentSize" width="128" height="45"/>
         </designable>
         <designable name="ixr-0u-dTD">
-            <size key="intrinsicContentSize" width="49" height="31"/>
+            <size key="intrinsicContentSize" width="47" height="30"/>
         </designable>
         <designable name="jwM-Un-vJo">
-            <size key="intrinsicContentSize" width="20" height="19"/>
+            <size key="intrinsicContentSize" width="20" height="22"/>
         </designable>
         <designable name="lhD-Tf-j08">
-            <size key="intrinsicContentSize" width="146" height="15.333333333333334"/>
+            <size key="intrinsicContentSize" width="194" height="20.333333333333332"/>
         </designable>
         <designable name="mSU-jE-98L">
-            <size key="intrinsicContentSize" width="35" height="29"/>
+            <size key="intrinsicContentSize" width="13" height="33.333333333333336"/>
         </designable>
         <designable name="mXR-LI-eao">
-            <size key="intrinsicContentSize" width="69.666666666666671" height="23"/>
+            <size key="intrinsicContentSize" width="34.666666666666664" height="18.666666666666668"/>
         </designable>
         <designable name="nIQ-VS-jss">
-            <size key="intrinsicContentSize" width="68.666666666666671" height="19"/>
+            <size key="intrinsicContentSize" width="71" height="20.333333333333332"/>
         </designable>
         <designable name="pRZ-i9-kuF">
-            <size key="intrinsicContentSize" width="192.33333333333334" height="36.666666666666664"/>
+            <size key="intrinsicContentSize" width="107" height="20.333333333333332"/>
         </designable>
         <designable name="sDr-88-Fbj">
-            <size key="intrinsicContentSize" width="162.66666666666666" height="19"/>
+            <size key="intrinsicContentSize" width="87.666666666666671" height="12"/>
         </designable>
         <designable name="sX1-rv-q59">
-            <size key="intrinsicContentSize" width="367" height="16.666666666666668"/>
+            <size key="intrinsicContentSize" width="445.66666666666669" height="20.333333333333332"/>
         </designable>
         <designable name="uF1-P3-XVr">
-            <size key="intrinsicContentSize" width="46.333333333333336" height="14.333333333333334"/>
+            <size key="intrinsicContentSize" width="62.333333333333336" height="20.333333333333332"/>
         </designable>
         <designable name="vAM-Zs-drD">
             <size key="intrinsicContentSize" width="48" height="48"/>
@@ -3866,25 +3867,25 @@ You will not be able to use this account in the future.</string>
             <size key="intrinsicContentSize" width="407" height="612"/>
         </designable>
         <designable name="vdO-D0-c2r">
-            <size key="intrinsicContentSize" width="304" height="30.666666666666668"/>
+            <size key="intrinsicContentSize" width="397.66666666666669" height="40.666666666666664"/>
         </designable>
         <designable name="w12-80-ph3">
-            <size key="intrinsicContentSize" width="111.33333333333333" height="19"/>
+            <size key="intrinsicContentSize" width="116.66666666666667" height="20.333333333333332"/>
         </designable>
         <designable name="wcf-nM-exb">
-            <size key="intrinsicContentSize" width="35" height="29"/>
+            <size key="intrinsicContentSize" width="13" height="33.333333333333336"/>
         </designable>
         <designable name="whs-bR-EUC">
-            <size key="intrinsicContentSize" width="15.666666666666666" height="19"/>
+            <size key="intrinsicContentSize" width="15.666666666666666" height="22"/>
         </designable>
         <designable name="xbv-4R-o9Y">
             <size key="intrinsicContentSize" width="25.666666666666668" height="25.666666666666668"/>
         </designable>
         <designable name="xnB-yp-Wkb">
-            <size key="intrinsicContentSize" width="94.333333333333329" height="19"/>
+            <size key="intrinsicContentSize" width="46.333333333333336" height="12"/>
         </designable>
         <designable name="y1c-ai-HyS">
-            <size key="intrinsicContentSize" width="30" height="31"/>
+            <size key="intrinsicContentSize" width="30" height="30"/>
         </designable>
     </designables>
     <resources>
