--- a/Kismat App/MainViewController/Xibs/GeneralHeaderTVCell.xib
+++ b/Kismat App/MainViewController/Xibs/GeneralHeaderTVCell.xib
@@ -56,6 +56,8 @@
                                         <rect key="frame" x="321" y="10" width="30" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="30" id="0uM-J4-b2N"/>
+                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="30" id="Bf0-Ru-71e"/>
+                                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="30" id="I1l-EP-RFR"/>
                                             <constraint firstAttribute="width" constant="30" id="yAq-SX-01S"/>
                                         </constraints>
                                         <color key="tintColor" name="Secondary Grey"/>
@@ -67,6 +69,8 @@
                                     <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="STARRED" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6BT-Eq-hcD" customClass="fullyCustomLbl" customModule="Kismmat" customModuleProvider="target">
                                         <rect key="frame" x="46" y="9" width="267" height="32"/>
                                         <constraints>
+                                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="32" id="Lyr-Hf-BhX"/>
+                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="267" id="NeF-aB-5To"/>
                                             <constraint firstAttribute="width" constant="267" id="UC8-ru-FIU"/>
                                             <constraint firstAttribute="height" constant="32" id="xmz-ZR-JPi"/>
                                         </constraints>
@@ -89,6 +93,8 @@
                                         <rect key="frame" x="46" y="9" width="267" height="32"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="267" id="RzD-L5-2Tv"/>
+                                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="32" id="SeL-m2-1yX"/>
+                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="267" id="fSa-JO-AnO"/>
                                             <constraint firstAttribute="height" constant="32" id="h6b-aY-hwl"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -109,26 +115,28 @@
                                     <imageView hidden="YES" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo name" translatesAutoresizingMaskIntoConstraints="NO" id="ooM-Y7-C6j">
                                         <rect key="frame" x="94.666666666666686" y="10" width="170" height="30"/>
                                         <constraints>
+                                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="30" id="6Dc-A9-CvW"/>
                                             <constraint firstAttribute="width" constant="170" id="CGd-NL-Nh4"/>
+                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="170" id="LZc-uU-Rp3"/>
                                             <constraint firstAttribute="height" constant="30" id="Nmi-le-WFl"/>
                                         </constraints>
                                     </imageView>
                                 </subviews>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstAttribute="trailing" secondItem="RN4-MZ-r6J" secondAttribute="trailing" constant="8" id="0Vu-dq-pdJ"/>
-                                    <constraint firstAttribute="bottom" secondItem="nax-I1-dp4" secondAttribute="bottom" constant="10" id="2kd-Tb-E9Q"/>
-                                    <constraint firstItem="v2n-8t-cBj" firstAttribute="centerY" secondItem="gT6-92-Go5" secondAttribute="centerY" id="9Yl-qF-xOS"/>
-                                    <constraint firstItem="v2n-8t-cBj" firstAttribute="centerX" secondItem="gT6-92-Go5" secondAttribute="centerX" id="IzX-ma-j6a"/>
-                                    <constraint firstItem="RN4-MZ-r6J" firstAttribute="top" secondItem="gT6-92-Go5" secondAttribute="top" constant="10" id="QIZ-NW-oJH"/>
-                                    <constraint firstItem="nax-I1-dp4" firstAttribute="top" secondItem="gT6-92-Go5" secondAttribute="top" constant="10" id="THh-9R-bdj"/>
-                                    <constraint firstItem="nax-I1-dp4" firstAttribute="leading" secondItem="gT6-92-Go5" secondAttribute="leading" constant="8" id="YVs-Ij-E8V"/>
-                                    <constraint firstItem="ooM-Y7-C6j" firstAttribute="centerX" secondItem="gT6-92-Go5" secondAttribute="centerX" id="aBn-mR-JIY"/>
-                                    <constraint firstAttribute="bottom" secondItem="RN4-MZ-r6J" secondAttribute="bottom" constant="10" id="nPC-xo-7f9"/>
-                                    <constraint firstAttribute="height" constant="50" id="piu-z0-T8c"/>
-                                    <constraint firstItem="6BT-Eq-hcD" firstAttribute="centerX" secondItem="gT6-92-Go5" secondAttribute="centerX" id="pr0-CL-99N"/>
-                                    <constraint firstItem="6BT-Eq-hcD" firstAttribute="centerY" secondItem="gT6-92-Go5" secondAttribute="centerY" id="zLJ-ht-2gF"/>
-                                    <constraint firstItem="ooM-Y7-C6j" firstAttribute="centerY" secondItem="gT6-92-Go5" secondAttribute="centerY" id="zwL-i2-nfW"/>
+                                    <constraint firstAttribute="bottom" secondItem="nax-I1-dp4" secondAttribute="bottom" constant="10" id="1ob-jd-3Jt"/>
+                                    <constraint firstItem="nax-I1-dp4" firstAttribute="leading" secondItem="gT6-92-Go5" secondAttribute="leading" constant="8" id="5Et-yY-ins"/>
+                                    <constraint firstItem="ooM-Y7-C6j" firstAttribute="centerX" secondItem="gT6-92-Go5" secondAttribute="centerX" id="7ll-so-wwE"/>
+                                    <constraint firstItem="6BT-Eq-hcD" firstAttribute="centerX" secondItem="gT6-92-Go5" secondAttribute="centerX" id="8iu-h4-V23"/>
+                                    <constraint firstItem="v2n-8t-cBj" firstAttribute="centerX" secondItem="gT6-92-Go5" secondAttribute="centerX" id="Ffm-5O-FnH"/>
+                                    <constraint firstAttribute="bottom" secondItem="RN4-MZ-r6J" secondAttribute="bottom" constant="10" id="If6-t7-aPr"/>
+                                    <constraint firstItem="v2n-8t-cBj" firstAttribute="centerY" secondItem="gT6-92-Go5" secondAttribute="centerY" id="M1t-BG-i4Q"/>
+                                    <constraint firstItem="ooM-Y7-C6j" firstAttribute="centerY" secondItem="gT6-92-Go5" secondAttribute="centerY" id="Qv8-S1-Vjd"/>
+                                    <constraint firstItem="RN4-MZ-r6J" firstAttribute="top" secondItem="gT6-92-Go5" secondAttribute="top" constant="10" id="Yvg-yi-xet"/>
+                                    <constraint firstAttribute="height" constant="50" id="e3g-tr-5EW"/>
+                                    <constraint firstAttribute="trailing" secondItem="RN4-MZ-r6J" secondAttribute="trailing" constant="8" id="mXb-4x-ojj"/>
+                                    <constraint firstItem="6BT-Eq-hcD" firstAttribute="centerY" secondItem="gT6-92-Go5" secondAttribute="centerY" id="rZO-Fu-qxj"/>
+                                    <constraint firstAttribute="width" constant="359" id="z8u-yt-aX4"/>
                                 </constraints>
                             </view>
                             <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FtL-JB-NbO">
@@ -498,19 +506,18 @@
                         <constraints>
                             <constraint firstItem="TDA-ZG-dfd" firstAttribute="leading" secondItem="yxB-RW-UxQ" secondAttribute="leading" constant="8" id="30w-OJ-Se6"/>
                             <constraint firstAttribute="trailing" secondItem="FtL-JB-NbO" secondAttribute="trailing" constant="8" id="6CC-Uw-cXm"/>
+                            <constraint firstAttribute="trailing" secondItem="gT6-92-Go5" secondAttribute="trailing" constant="8" id="9S7-FZ-pZ2"/>
                             <constraint firstAttribute="bottom" secondItem="TDA-ZG-dfd" secondAttribute="bottom" constant="20" id="9SM-74-v1D"/>
+                            <constraint firstItem="gT6-92-Go5" firstAttribute="leading" secondItem="yxB-RW-UxQ" secondAttribute="leading" constant="8" id="AuF-tW-oWd"/>
                             <constraint firstAttribute="height" constant="188" id="BqW-LH-1ba"/>
                             <constraint firstItem="FtL-JB-NbO" firstAttribute="leading" secondItem="yxB-RW-UxQ" secondAttribute="leading" constant="8" id="L4r-Dh-ihL"/>
                             <constraint firstItem="FtL-JB-NbO" firstAttribute="top" secondItem="yxB-RW-UxQ" secondAttribute="top" constant="18" id="Mbj-T5-06I"/>
-                            <constraint firstItem="gT6-92-Go5" firstAttribute="leading" secondItem="yxB-RW-UxQ" secondAttribute="leading" constant="8" id="Y98-ow-k5p"/>
-                            <constraint firstItem="gT6-92-Go5" firstAttribute="top" secondItem="yxB-RW-UxQ" secondAttribute="top" constant="18" id="aFw-7X-OAM"/>
-                            <constraint firstItem="cn8-Nl-EBJ" firstAttribute="top" secondItem="gT6-92-Go5" secondAttribute="bottom" constant="8" symbolic="YES" id="apS-tf-Bxs"/>
+                            <constraint firstItem="gT6-92-Go5" firstAttribute="top" secondItem="yxB-RW-UxQ" secondAttribute="top" constant="18" id="QcG-rH-kH6"/>
+                            <constraint firstItem="cn8-Nl-EBJ" firstAttribute="top" secondItem="gT6-92-Go5" secondAttribute="bottom" constant="8" symbolic="YES" id="Xvo-jV-E73"/>
                             <constraint firstAttribute="bottom" secondItem="cn8-Nl-EBJ" secondAttribute="bottom" constant="9" id="ewF-y0-tXB"/>
                             <constraint firstItem="cn8-Nl-EBJ" firstAttribute="leading" secondItem="yxB-RW-UxQ" secondAttribute="leading" constant="8" id="mRZ-h1-rQx"/>
                             <constraint firstAttribute="trailing" secondItem="cn8-Nl-EBJ" secondAttribute="trailing" constant="8" id="s9q-62-hn7"/>
-                            <constraint firstAttribute="trailing" secondItem="gT6-92-Go5" secondAttribute="trailing" constant="8" id="vZr-b9-IFH"/>
                             <constraint firstItem="cn8-Nl-EBJ" firstAttribute="top" secondItem="FtL-JB-NbO" secondAttribute="bottom" constant="8" symbolic="YES" id="wSm-Kt-9iC"/>
-                            <constraint firstItem="TDA-ZG-dfd" firstAttribute="top" secondItem="gT6-92-Go5" secondAttribute="bottom" constant="8" symbolic="YES" id="wel-0G-rdY"/>
                             <constraint firstAttribute="trailing" secondItem="TDA-ZG-dfd" secondAttribute="trailing" constant="8" id="yOZ-po-z0X"/>
                         </constraints>
                     </view>
