--- a/Kismat App/Views/ViewControllers/Notification/Xibs/NotifTVCell.xib
+++ b/Kismat App/Views/ViewControllers/Notification/Xibs/NotifTVCell.xib
@@ -11,7 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="60" id="KGk-i7-Jjw" customClass="NotifTVCell" customModule="Kismat_App" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="60" id="KGk-i7-Jjw" customClass="NotifTVCell" customModule="Kismmet" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="375" height="60"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -21,10 +21,10 @@
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="EaN-aB-lVi">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="60"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="u6Q-ma-6OQ" customClass="RoundCornerView" customModule="Kismat_App" customModuleProvider="target">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="u6Q-ma-6OQ" customClass="RoundCornerView" customModule="Kismmet" customModuleProvider="target">
                                 <rect key="frame" x="18.666666666666657" y="6" width="338" height="48"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Zoya Grey," textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4tC-lT-b0A" customClass="fullyCustomLbl" customModule="Kismat_App" customModuleProvider="target">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Zoya Grey," textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4tC-lT-b0A" customClass="fullyCustomLbl" customModule="Kismmet" customModuleProvider="target">
                                         <rect key="frame" x="49" y="5" width="113" height="21"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="113" id="7Cb-a6-NQh"/>
@@ -43,7 +43,7 @@
                                             </userDefinedRuntimeAttribute>
                                         </userDefinedRuntimeAttributes>
                                     </label>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="girl" translatesAutoresizingMaskIntoConstraints="NO" id="3K7-xY-tSk" customClass="RoundedImageView" customModule="Kismat_App" customModuleProvider="target">
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="girl" translatesAutoresizingMaskIntoConstraints="NO" id="3K7-xY-tSk" customClass="RoundedImageView" customModule="Kismmet" customModuleProvider="target">
                                         <rect key="frame" x="6" y="6" width="35" height="35"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="35" id="3Z5-cd-1fb"/>
@@ -73,7 +73,7 @@
                                             </userDefinedRuntimeAttribute>
                                         </userDefinedRuntimeAttributes>
                                     </imageView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Jan 29, 2023 at 4:30 PM" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="awn-L4-6vZ" customClass="fullyCustomLbl" customModule="Kismat_App" customModuleProvider="target">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Jan 29, 2023 at 4:30 PM" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="awn-L4-6vZ" customClass="fullyCustomLbl" customModule="Kismmet" customModuleProvider="target">
                                         <rect key="frame" x="170" y="5" width="150" height="21"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="150" id="KqO-05-HA8"/>
@@ -93,7 +93,7 @@
                                             <userDefinedRuntimeAttribute type="string" keyPath="txtStroke" value="l"/>
                                         </userDefinedRuntimeAttributes>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=" your profile" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="F0z-u8-403" customClass="fullyCustomLbl" customModule="Kismat_App" customModuleProvider="target">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=" your profile" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="F0z-u8-403" customClass="fullyCustomLbl" customModule="Kismmet" customModuleProvider="target">
                                         <rect key="frame" x="49" y="22" width="271" height="21"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="21" id="PqP-A2-OWn"/>
@@ -123,7 +123,6 @@
                                     <constraint firstAttribute="bottom" secondItem="awn-L4-6vZ" secondAttribute="bottom" constant="22" id="J8z-9x-PSn"/>
                                     <constraint firstItem="F0z-u8-403" firstAttribute="top" secondItem="4tC-lT-b0A" secondAttribute="bottom" constant="-4" id="R4V-gB-bgv"/>
                                     <constraint firstItem="4tC-lT-b0A" firstAttribute="top" secondItem="u6Q-ma-6OQ" secondAttribute="top" constant="5" id="RJz-oC-73G"/>
-                                    <constraint firstItem="awn-L4-6vZ" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="4tC-lT-b0A" secondAttribute="trailing" priority="500" constant="6" id="TAQ-lM-ncq"/>
                                     <constraint firstItem="3K7-xY-tSk" firstAttribute="leading" secondItem="u6Q-ma-6OQ" secondAttribute="leading" constant="6" id="Ulx-1W-tTB"/>
                                     <constraint firstItem="4tC-lT-b0A" firstAttribute="leading" secondItem="3K7-xY-tSk" secondAttribute="trailing" constant="8" id="V2Z-d4-PXJ"/>
                                     <constraint firstItem="F0z-u8-403" firstAttribute="leading" secondItem="3K7-xY-tSk" secondAttribute="trailing" constant="8" id="Z36-Xo-DxE"/>
@@ -184,13 +183,13 @@
             <size key="intrinsicContentSize" width="407" height="612"/>
         </designable>
         <designable name="4tC-lT-b0A">
-            <size key="intrinsicContentSize" width="56" height="14.333333333333334"/>
+            <size key="intrinsicContentSize" width="59.666666666666664" height="14"/>
         </designable>
         <designable name="F0z-u8-403">
-            <size key="intrinsicContentSize" width="57.666666666666664" height="13"/>
+            <size key="intrinsicContentSize" width="59.333333333333336" height="12.666666666666666"/>
         </designable>
         <designable name="awn-L4-6vZ">
-            <size key="intrinsicContentSize" width="118.66666666666667" height="13"/>
+            <size key="intrinsicContentSize" width="121.66666666666667" height="12.666666666666666"/>
         </designable>
     </designables>
     <resources>
