--- a/Kismat App/MainViewController/Xibs/BlockBtnTVCell.xib
+++ b/Kismat App/MainViewController/Xibs/BlockBtnTVCell.xib
@@ -12,23 +12,22 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" id="KGk-i7-Jjw" customClass="BlockBtnTVCell" customModule="Kismmat" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" id="KGk-i7-Jjw" customClass="BlockBtnTVCell" customModule="Kismmet" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JPN-Po-Uf6">
-                        <rect key="frame" x="64.666666666666686" y="0.0" width="191" height="44"/>
+                    <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="JPN-Po-Uf6">
+                        <rect key="frame" x="51" y="0.0" width="219" height="44"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zBy-cy-4aw">
-                                <rect key="frame" x="22" y="7" width="148" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zBy-cy-4aw">
+                                <rect key="frame" x="15" y="7" width="189" height="30"/>
                                 <fontDescription key="fontDescription" type="system" weight="medium" pointSize="15"/>
                                 <color key="tintColor" name="Danger"/>
                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                <state key="normal" title=" Block User" image="hand.raised.brakesignal.slash" catalog="system">
+                                <state key="normal" title=" Block/Report User" image="hand.raised.brakesignal.slash" catalog="system">
                                     <color key="titleColor" name="Text grey"/>
                                     <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="medium" weight="semibold"/>
                                 </state>
@@ -36,8 +35,12 @@
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="zBy-cy-4aw" firstAttribute="centerY" secondItem="JPN-Po-Uf6" secondAttribute="centerY" id="2Ci-lE-aSw"/>
                             <constraint firstAttribute="height" constant="44" id="E6q-G8-YCT"/>
+                            <constraint firstItem="zBy-cy-4aw" firstAttribute="centerX" secondItem="JPN-Po-Uf6" secondAttribute="centerX" id="Nf6-Zg-vVA"/>
                             <constraint firstAttribute="width" constant="191" id="emt-vR-ILZ"/>
+                            <constraint firstItem="zBy-cy-4aw" firstAttribute="top" secondItem="JPN-Po-Uf6" secondAttribute="top" constant="7" id="tuh-wG-Yzt"/>
+                            <constraint firstItem="zBy-cy-4aw" firstAttribute="leading" secondItem="JPN-Po-Uf6" secondAttribute="leading" constant="15" id="wxh-o1-HNJ"/>
                         </constraints>
                     </view>
                 </subviews>
