--- a/Kismat App/Views/ViewControllers/TagsView /Xibs/hashTagsTVCell.xib
+++ b/Kismat App/Views/ViewControllers/TagsView /Xibs/hashTagsTVCell.xib
@@ -11,7 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="74" id="KGk-i7-Jjw" customClass="hashTagsTVCell" customModule="Kismat_App" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="74" id="KGk-i7-Jjw" customClass="hashTagsTVCell" customModule="Kismmet" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="375" height="40"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -33,10 +33,10 @@
                                         </constraints>
                                         <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="small" weight="thin"/>
                                     </imageView>
-                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="jA6-go-Rgo" customClass="FormTextField" customModule="Kismat_App" customModuleProvider="target">
-                                        <rect key="frame" x="27" y="6" width="312" height="21"/>
+                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="jA6-go-Rgo" customClass="FormTextField" customModule="Kismmet" customModuleProvider="target">
+                                        <rect key="frame" x="27" y="6" width="289" height="21"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="312" id="VlX-jy-5Dp"/>
+                                            <constraint firstAttribute="width" constant="289" id="VlX-jy-5Dp"/>
                                             <constraint firstAttribute="height" constant="21" id="vI1-hd-m7m"/>
                                         </constraints>
                                         <color key="textColor" name="Text grey"/>
@@ -59,7 +59,7 @@
                                     <constraint firstItem="jA6-go-Rgo" firstAttribute="top" secondItem="M2P-T9-kqk" secondAttribute="top" constant="6" id="eTb-sY-nti"/>
                                     <constraint firstItem="BdZ-GT-dus" firstAttribute="top" secondItem="M2P-T9-kqk" secondAttribute="top" constant="4" id="fNA-lc-i1s"/>
                                     <constraint firstItem="jA6-go-Rgo" firstAttribute="leading" secondItem="BdZ-GT-dus" secondAttribute="trailing" constant="-6" id="fQB-wI-XtE"/>
-                                    <constraint firstAttribute="trailing" secondItem="jA6-go-Rgo" secondAttribute="trailing" constant="5" id="jEo-8Q-MhW"/>
+                                    <constraint firstAttribute="trailing" secondItem="jA6-go-Rgo" secondAttribute="trailing" constant="28" id="jEo-8Q-MhW"/>
                                 </constraints>
                             </view>
                         </subviews>
@@ -88,7 +88,7 @@
     </objects>
     <designables>
         <designable name="jA6-go-Rgo">
-            <size key="intrinsicContentSize" width="26" height="20.666666666666668"/>
+            <size key="intrinsicContentSize" width="4" height="18.666666666666668"/>
         </designable>
     </designables>
     <resources>
